# restaurant

./: Cargo.toml
.github/workflows/: clippy-check.yml  rustfmt-check.yml
common/: Cargo.toml
common/src/: async_fn.rs  config.rs  kafka_consumer.rs  kafka_producer.rs  lib.rs  model.rs  recipe.rs  types.rs
docker/: docker-compose.yml  env.yml  minecraft-test-server.yml
event-observer/: Cargo.toml
event-observer/resources/: config.toml
event-observer/src/: config.rs  db.rs  main.rs  server.rs
ingredient-generator/: Cargo.toml  README.md
ingredient-generator/resources/: config.toml
ingredient-generator/src/: config.rs  generator.rs  ingredients.rs  main.rs
kitchen/: Cargo.toml
kitchen/resources/: config.toml
kitchen/src/: config.rs  db.rs  kitchen.rs  listener.rs  main.rs
rcon-conductor/: Cargo.toml
rcon-conductor/resources/: config.toml
rcon-conductor/src/: config.rs  db.rs  listener.rs  main.rs  rcon.rs
recipe-generator/: Cargo.toml  Rocket.toml  client.http
recipe-generator/resources/: assets.json  config.toml
recipe-generator/src/: assets.rs  config.rs  generator.rs  main.rs  route.rs
restaurant-client/: .gitignore  LICENSE  gradle.properties
restaurant-client/src/main/java/restaurantclient/restaurantclient/: GenerateRecipeCommand.java  RestaurantClient.java
restaurant-client/src/main/java/restaurantclient/restaurantclient/client/: RestaurantClientClient.java
restaurant-client/src/main/resources/: fabric.mod.json  restaurant-client.mixins.json
restaurant-conductor/: Cargo.toml
restaurant-conductor/resources/: config.toml
restaurant-conductor/src/: config.rs  db.rs  generator.rs  listener.rs  main.rs
