[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.21", default-features = false, features = ["sink"] }
futures-channel = "0.3.21"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
kafka = "0.9.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = "0.17.2"
chrono = { version = "0.4.20", features = ["serde"] }
bson = "2.4.0"
toml = "0.5.9"
