[package]
name = "event-observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "io-util"] }
tokio-tungstenite = "0.17.2"
