[package]
name = "event-observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

futures-util = { version = "0.3.21", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "io-util", "sync"] }
tokio-stream-ext = "0.1.5"
tokio-tungstenite = "0.17.2"
futures-channel = "0.3.21"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
mongodb = { version = "2.3.0", features = ["tokio-runtime"] }
futures = "0.3.21"
chrono = { version = "0.4.20", features = ["serde"] }
