[package]
name = "ingredient-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restaurant-common = { path = "../common" }

serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
