[package]
name = "kitchen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
mongodb = { version = "2.3.0", features = ["tokio-runtime"] }
futures = "0.3.21"
chrono = { version = "0.4.20", features = ["serde"] }
